test/should_fail/arrays_zero_size.cl
MAIN()
	let abc be 0 int array
	x := 5